name:          pgminer
version:       0.0.1
synopsis:      A library for process mining
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/process-mining.git
category:      Process-mining
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/process-mining.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Concurrency,
                      Tuura.Graph,
                      Tuura.Log,
                      Tuura.Relation
    build-depends:    base >= 4.7 && < 5,
                      array == 0.5.*,
                      containers == 0.5.*
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs
    
test-suite pgminer-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.7 && < 5,  
                      pgminer,
                      containers == 0.5.*
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs

