name:          pgminer
version:       0.0.1
synopsis:      A library for process mining
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/process-mining.git
category:      Process-mining
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/process-mining.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Concurrency,
                      Tuura.Graph,
                      Tuura.Log,
                      Tuura.Macro,
                      Tuura.Relation
    build-depends:    array == 0.5.*,
                      base >= 4.7 && < 5,
                      containers == 0.5.*
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs

test-suite pgminer-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.7 && < 5,
                      containers == 0.5.*,
                      pgminer
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs

executable pgminer
    main-is:          pgminer.hs
    build-depends:    base >= 4.7 && < 5,
                      containers == 0.5.*,
                      filepath,
                      pgminer
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs

executable macroscope
    main-is:          macroscope.hs
    build-depends:    base >= 4.7 && < 5,
                      containers == 0.5.*,
                      pgminer
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs
