name:          process-mining
version:       0.0.1
synopsis:      A library for process mining
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/process-mining.git
category:      Algorithms, Pattern Classification, Process mining
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/process-mining.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Concurrency,
                      Tuura.Graph,
                      Tuura.Log,
                      Tuura.Macro,
                      Tuura.Relation
    build-depends:    array == 0.5.*,
                      base >= 4.7 && < 5,
                      filepath,
                      containers == 0.5.*
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs -O2

test-suite pgminer-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.7 && < 5,
                      containers == 0.5.*,
                      process-mining
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs

executable pgminer
    hs-source-dirs:   pgminer
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5,
                      containers == 0.5.*,
                      filepath,
                      process-mining
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs -O2

executable macroscope
    hs-source-dirs:   macroscope
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5,
                      containers == 0.5.*,
                      process-mining
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs -O2
